
3.68  2012-12-16
  - Added monkey_patch function to Mojo::Util.
  - Updated jQuery to version 1.8.3.
  - Improved documentation.
  - Improved tests.
  - Fixed small export bug in Mojolicious::Lite. (jberger)

3.67  2012-12-15
  - Added support for MIME type prioritization to Mojolicious::Types.
  - Improved respond_to to prioritize multiple MIME types if the
    X-Requested-With header is set to the value "XMLHttpRequest".
  - Improved documentation.

3.66  2012-12-14
  - Added request_ok method to Test::Mojo.
  - Improved documentation.
  - Improved tests.
  - Fixed multipart boundary detection bug in Mojo::Content.
  - Fixed format regex generation bug in Mojolicious::Routes::Pattern.

3.65  2012-12-09
  - Added upgrade method to Mojo::UserAgent::Transactor.
  - Added is_range method to Mojo::Asset.
  - Improved documentation.
  - Improved tests.
  - Fixed parameter replacement bug in Mojo::Parameters. (alexbyk, sri)
  - Fixed small paragraph bug in Mojo::DOM::HTML.

3.64  2012-12-01
  - Improved documentation.
  - Improved tests.
  - Fixed bug where Mojo::UserAgent::Transactor would escape
    Content-Disposition values.

3.63  2012-11-28
  - Added support for smooth restarting to Morbo.
  - Added acceptor method to Mojo::IOLoop.
  - Added stop method to Mojo::Server::Daemon.
  - Improved memory usage of chunked transfer encoding parser in
    Mojo::Content.
  - Improved documentation.
  - Improved tests.

3.62  2012-11-26
  - Improved compatibility with IO::Socket::SSL 1.79.
  - Improved encode/decode performance in Mojo::Util by using a cache.
  - Improved tests.
  - Fixed clone bugs in Mojo::URL.

3.61  2012-11-25
  - Added protocol method to Mojo::URL.
  - Added charset attribute to Mojo::Path.
  - Improved support for relative redirects in Mojo::UserAgent::Transactor.
  - Improved documentation.
  - Improved tests.
  - Fixed clone bugs in Mojo::Parameters and Mojo::URL.
  - Fixed case sensitivity bugs in Mojo::UserAgent::Transactor.

3.60  2012-11-22