@@ -2,6 +2,7 @@
 *~
 !.gitignore
 !.perltidyrc
+!.travis.yml
 blib
 pm_to_blib
 Makefile*
